[package]
name = "test-obs"
version = "0.1.0"
edition = "2021"

[dependencies]
# libobs-sources = "0.1.1"
libobs-window-helper = { git = "https://github.com/joshprk/libobs-rs.git"}
# libobs = "0.1.3"
libobs-wrapper = { git = "https://github.com/joshprk/libobs-rs.git"}
libobs-sources = { git = "https://github.com/joshprk/libobs-rs.git"}
libobs-new = { git = "https://github.com/joshprk/libobs-rs.git"}
env_logger = "0.11.5"
tokio = { version = "1.39.2", features = ["full"]}